@@ -127,6 +127,23 @@ subprojects {
             showStandardStreams = false
         }
     }
+    tasks.register('testWindows', Test)  {
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+        useJUnitPlatform {
+            excludeTags "windowsFail"
+        }
+        failFast true
+        testLogging {
+            events "passed", "skipped", "failed" //, "standardOut", "standardError"
+
+            showExceptions true
+            exceptionFormat "full"
+            showCauses true
+            showStackTraces true
+
+            showStandardStreams = false
+        }
+    }
 }
 
 /* generate java test coverage report*/
